--- a/views/game/index.html
+++ b/views/game/index.html
@@ -11,14 +11,18 @@
     <script type="text/babel" src="../js/main.js" defer></script>
 </head>
 <body>
-    <!-- Begin page content -->
     <div class="container">
-        <div class="page-header">
-            <h1>Status of DarkGame</h1>
+        <div class="row">
+            <div class="page-header">
+                <h1>Status of DarkGame</h1>
+            </div>
         </div>
     </div>
-
-    <div id="darkgame" class="container"></div>
+    <div class="container">
+        <div class="row">
+            <div id="darkgame" class="col-md-12"></div>
+        </div>
+    </div>
 
     <footer class="footer">
     <div class="container">
