--- a/views/game/index.html
+++ b/views/game/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>DarkGame</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/footer.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="./css/footer.css" type="text/css" charset="utf-8">
     <script src="https://fb.me/react-15.2.1.min.js"></script>
     <script src="https://fb.me/react-dom-15.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-    <script type="text/babel" src="../js/main.js" defer></script>
+    <script type="text/babel" src="./js/main.js" defer></script>
 </head>
 <body>
     <div class="container">
